Status API added
