# cmd/calculation-api/docs/swagger.json
@@ -53,6 +53,29 @@
                     }
                 }
             }
+        },
+        "/status": {
+            "get": {
+                "description": "Provides the version and hash of the executable code of the calculation engine",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "root"
+                ],
+                "summary": "Provide the status of the calculation engine",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Header"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -95,6 +118,17 @@
                     "items": {
                         "$ref": "#/definitions/models.ServiceGroup"
                     }
+                }
+            }
+        },
+        "models.Header": {
+            "type": "object",
+            "properties": {
+                "md5hash": {
+                    "type": "string"
+                },
+                "version": {
+                    "type": "string"
                 }
             }
         },
@@ -169,6 +203,9 @@
         "models.Result": {
             "type": "object",
             "properties": {
+                "header": {
+                    "$ref": "#/definitions/models.Header"
+                },
                 "intermediateResults": {
                     "type": "array",
                     "items": {
